fix: 복수 이미지 받는 api 수정
